# face-profiler

./: .gitignore  README.md  face_profiler.py  pyproject.toml  requirements.txt
face_profiler/: __init__.py  __main__.py  constants.py  core.py  detection.py  gui.py  models.py  rendering.py
mivolo/model/: create_timm_model.py
